hphp/hack/test/typecheck/strict_string_concat_interp/interp.php.exp
File "interp.php", line 5, characters 11-12:
Only string and int values can be used in string interpolation (Typing[4415])
  File "interp.php", line 5, characters 11-12:
  Expected `string` or `int`
  File "interp.php", line 4, characters 21-24:
  But got `bool`
File "interp.php", line 6, characters 11-12:
Only string and int values can be used in string interpolation (Typing[4415])
  File "interp.php", line 6, characters 11-12:
  Expected `string` or `int`
  File "interp.php", line 4, characters 30-34:
  But got `float`
File "interp.php", line 7, characters 11-12:
Only string and int values can be used in string interpolation (Typing[4415])
  File "interp.php", line 7, characters 11-12:
  Expected `string` or `int`
  File "interp.php", line 4, characters 40-43:
  But got `null`
File "interp.php", line 8, characters 14-15:
Only string and int values can be used in string interpolation (Typing[4415])
  File "interp.php", line 8, characters 14-15:
  Expected `string` or `int`
  File "interp.php", line 4, characters 21-24:
  But got `bool`
